kqed_dev4/src/objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Group_New__c</fullName>
        <label>Industry Group New</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry_Group__c</fullName>
        <label>Industry Group</label>
        <referenceTo>Industry_Group__c</referenceTo>
        <relationshipLabel>Industries</relationshipLabel>
        <relationshipName>Industries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <label>Standard</label>
        <picklist>
            <picklistValues>
                <fullName>SIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GICS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Industry</label>
    <listViews>
        <fullName>AllIndustries</fullName>
        <columns>NAME</columns>
        <columns>Industry_Code__c</columns>
        <columns>Industry_Group__c</columns>
        <columns>Standard__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Industries</label>
    </listViews>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <recordTypes>
        <fullName>Division_A_Agriculture_Forestry_And_Fishing</fullName>
        <active>true</active>
        <label>Division A: Agriculture, Forestry, And Fishing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Division_B_Mining</fullName>
        <active>true</active>
        <label>Division B: Mining</label>
    </recordTypes>
    <recordTypes>
        <fullName>Division_C_Construction</fullName>
        <active>true</active>
        <label>Division C: Construction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Division_D_Manufacturing</fullName>
        <active>true</active>
        <label>Division D: Manufacturing</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>